# maoban-cat

./: README.md  build.yml
.github/workflows/: build.yml
src/: cat.html  setting.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
