[package]
name = "maoban"
version = "1.0.0"
description = "喵伴 - 你的桌面宠物猫"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
name = "maoban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "maoban"
path = "src/main.rs"

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "shell-open", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
strip = true
lto = true
opt-level = "s"